MOZJS_ROOT = "${MAPLE_ROOT}/mozjs"
MOZJS_SOURCE_DIR = "${MOZJS_ROOT}/mozjs-31.2.0"
MOZJS_BUILD_DIR = "${MOZJS_ROOT}/mozjs-build"
MOZJS_INSTALL_DIR = "${MOZJS_BUILD_DIR}/dist"

print("---------------${MOZJS_INSTALL_DIR}/system_wrappers ${USE_CLANG}")
executable("js2mpl1"){
    sources = [
        "src/closure.cpp",
        "src/compiler.cpp",
        "src/eh.cpp",
        "src/js2mpl.cpp",
        "src/jsfunction.cpp",
        "src/jsmirbuilder.cpp",
        "src/operandstack.cpp",
        "src/scope.cpp",
        "src/util.cpp",
    ]

    include_dirs = [
        "//mapleall",
        "${MOZJS_INSTALL_DIR}/include",
        "${MOZJS_INSTALL_DIR}/system_wrappers",
        "${MOZJS_SOURCE_DIR}",
        "${MOZJS_SOURCE_DIR}/js/src",
        "${MOZJS_SOURCE_DIR}/mfbt/double-conversion",
        "${MOZJS_SOURCE_DIR}/intl/icu/source/common",
        "${MOZJS_SOURCE_DIR}/intl/icu/source/i18n",
        "${MOZJS_SOURCE_DIR}/js/public",
        "${MAPLEALL_ROOT}/mapleutil/include",
    ]

    deps = [
        "//mapleall/mapleir:libmapleir",
        "//mapleall/mapleutil:libmplutil",
        "//mapleall/Mempool:libmempool",
        "//mapleall/HuaweiSecureC:libHWSecureC",
    ]

    cflags_cc +=[
        "-DMIR_FEATURE_FULL=1",
        "-std=c++11",
        "-w",
        "-include${MOZJS_SOURCE_DIR}/config/gcc_hidden.h",
        "-include${MOZJS_BUILD_DIR}/js/src/js-confdefs.h"
    ]

    libs = [
        "${MOZJS_INSTALL_DIR}/lib/libjs_static.a",
    ]

    ldflags = [
        "-Wall",
        "-m32",
        "-DDYNAMICLANG",
        "-DRC_NO_MMAP",
        "-DMIR_FEATURE_FULL=1",
        "-DMIR_DEX=0",
        "-std=c++11",
        "-w",
        "-O3",
        "-rdynamic",
        "-L${MOZJS_INSTALL_DIR}/lib",
        "-Wl,-rpath,${MOZJS_INSTALL_DIR}/lib",
        "-ljs_static",
        "-lz",
        "-lpthread",
        "-ldl",
    ]
}


# -O3 -Wall -m64 -DDYNAMICLANG -DRC_NO_MMAP -DMIR_FEATURE_FULL=1 -DMIR_DEX=1 -DDEXHACK=1
# -Wall  -m32 -DDYNAMICLANG -DRC_NO_MMAP -DMIR_FEATURE_FULL=1 -DMIR_DEX=0 -std=c++11 -Werror -Wno-unused-variable -O3
# -O3 -Wall -m32 -DDYNAMICLANG -DRC_NO_MMAP -DMIR_FEATURE_FULL=1 -DMIR_DEX=0  -std=c++11 -Werror -Wno-unused-variable
#g++  -Wall  -m32 -DDYNAMICLANG -DRC_NO_MMAP -DMIR_FEATURE_FULL=1 -DMIR_DEX=0 -std=c++11 -w -O3  -rdynamic js2mpl/src/CMakeFiles/js2mpl.dir/closure.cpp.o js2mpl/src/CMakeFiles/js2mpl.dir/compiler.cpp.o js2mpl/src/CMakeFiles/js2mpl.dir/eh.cpp.o js2mpl/src/CMakeFiles/js2mpl.dir/js2mpl.cpp.o js2mpl/src/CMakeFiles/js2mpl.dir/jsfunction.cpp.o js2mpl/src/CMakeFiles/js2mpl.dir/jsmirbuilder.cpp.o js2mpl/src/CMakeFiles/js2mpl.dir/operandstack.cpp.o js2mpl/src/CMakeFiles/js2mpl.dir/scope.cpp.o js2mpl/src/CMakeFiles/js2mpl.dir/util.cpp.o  -o ../../target/product/maple_arm32-gnu-release/bin/js2mpl -L/home/lpc/figo/maple/mozjs/mozjs-build/dist/lib -Wl,-rpath,/home/lpc/figo/maple/mozjs/mozjs-build/dist/lib lib/32/libmplir.a lib/32/libmplutil.a lib/32/libmempool.a -ljs_static -lz -lpthread -ldl lib/32/libHWSecureC.a 